--- a/public/layouts/application.html
+++ b/public/layouts/application.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Company Dashboard</title>
+    
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/rdash.min.css">
     <link rel="stylesheet" href="css/gmaps.css">
@@ -33,7 +35,7 @@
     <script type="text/javascript" src="dependencies/lodash.min.js"></script>
     <script type="text/javascript" src="dependencies/angular-simple-logger.min.js"></script>
     <!--<script type="text/javascript" src="dependencies/angular-datatables.min.js"></script>    -->
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB-NoOWNlaKKAPKY1lvJ46NwKpT7PPot0I&amp;"></script>
+	  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB-NoOWNlaKKAPKY1lvJ46NwKpT7PPot0I&amp;"></script>
     <script type="text/javascript" src="dependencies/angular-google-maps.min.js"></script>
     <script type="text/javascript" src="dependencies/ui-bootstrap-tpls-1.3.2.js"></script>
     <script type="text/javascript" src="dependencies/angular-cookies.js"></script>
@@ -41,21 +43,21 @@
     <script type="text/javascript" src="dependencies/d3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="dependencies/nv.d3.min.js"></script>
     <script type="text/javascript" src="dependencies/angular-nvd3.js"></script>    
-    <script type="text/javascript" src="dependencies/ng-table.min.js"></script> 
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.js"></script>
-    <script src="https://rawgit.com/krispo/angular-nvd3/v1.0.5/dist/angular-nvd3.js"></script>    
-    <script src="https://npmcdn.com/ng-table@1.0.0/dist/ng-table.min.js"></script>                -->
+    <script type="text/javascript" src="dependencies/ng-table.min.js"></script>     
+    <script type="text/javascript" src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <script type="text/javascript" src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>   
+
+
     <script type="text/javascript" src="js/app.js"></script>
     <!--<script type="text/javascript" src="javascripts/network.js"></script>-->
     
-    <script>
+    <!--<script>
         if ('serviceWorker' in navigator) {
                     navigator.serviceWorker.register('/my-service-worker.js').then(function() { 
                 console.log("Service Worker Registered"); 
                 });
                 }
-    </script>
+    </script>-->
 
 
   </body>
